--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
     <!-- Site Metas -->
-    <title>Food Funday Restaurant - One page HTML Responsive</title>
+    <title>IsaTradingImpex</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -67,13 +67,13 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="active"><a href="#banner">Home</a></li>
                                     <li><a href="#about">About us</a></li>
-                                    <li><a href="#menu">Menu</a></li>
+                                    <!-- <li><a href="#menu">Menu</a></li> -->
                                     <li><a href="#our_team">Team</a></li>
                                     <li><a href="#gallery">Gallery</a></li>
-                                    <li><a href="#blog">Blog</a></li>
+                                    <!-- <li><a href="#blog">Blog</a></li>
                                     <li><a href="#pricing">pricing</a></li>
-                                    <li><a href="#reservation">Reservaion</a></li>
-                                    <li><a href="#footer">Contact us</a></li>
+                                    <li><a href="#reservation">Reservaion</a></li> -->
+                                    <li><a href="#reservation">Contact us</a></li>
                                 </ul>
                             </div>
                             <!-- end nav-collapse -->
@@ -842,7 +842,7 @@
     </div>
     <!-- end blog-main -->
 
-    <div id="pricing" class="pricing-main pad-top-100 pad-bottom-100">
+    <!-- <div id="pricing" class="pricing-main pad-top-100 pad-bottom-100">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -851,9 +851,9 @@
 					</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut orci varius, elementum lectus nec, aliquam lectus. Duis neque augue, maximus in sapien ut, porta pharetra odio.</p>
                 </div>
-                <div class="panel-pricing-in">
+                <div class="panel-pricing-in"> -->
                     <!-- item -->
-                    <div class="col-md-4 col-sm-4 text-center">
+                    <!-- <div class="col-md-4 col-sm-4 text-center">
                         <div class="panel panel-pricing">
                             <div class="panel-heading">
                                 <div class="pric-icon">
@@ -876,11 +876,11 @@
                                 <a class="btn btn-lg btn-block hvr-underline-from-center" href="#">Purchase Now!</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- /item -->
 
                     <!-- item -->
-                    <div class="col-md-4 col-sm-4 text-center">
+                    <!-- <div class="col-md-4 col-sm-4 text-center">
                         <div class="panel panel-pricing">
                             <div class="panel-heading">
                                 <div class="pric-icon">
@@ -903,11 +903,11 @@
                                 <a class="btn btn-lg btn-block hvr-underline-from-center" href="#">Purchase Now!</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- /item -->
 
                     <!-- item -->
-                    <div class="col-md-4 col-sm-4 text-center">
+                    <!-- <div class="col-md-4 col-sm-4 text-center">
                         <div class="panel panel-pricing">
                             <div class="panel-heading">
                                 <div class="pric-icon">
@@ -930,7 +930,7 @@
                                 <a class="btn btn-lg btn-block hvr-underline-from-center" href="#">Purchase Now!</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- /item -->
                 </div>
             </div>
@@ -947,7 +947,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                             <h2 class="block-title text-center">
-						Reservations			
+						Contact Us			
 					</h2>
                         </div>
                         <h4 class="form-title">BOOKING FORM</h4>
@@ -1121,17 +1121,18 @@
                                 <h3>Contact Us</h3>
                                 <p>
                                     <i class="fa fa-map-signs" aria-hidden="true"></i>
-                                    <span>6 E Esplanade, St Albans VIC 3021, Australia</span>
+                                    <span>19/1107-B1, Chalappuram, Puthiyapalam Road
+                                        Calicut 673002  Kerala, India.</span>
                                 </p>
                                 <p>
                                     <i class="fa fa-mobile" aria-hidden="true"></i>
                                     <span>
-									+91 80005 89080 
+									+91 9745 222 660 
 								</span>
                                 </p>
                                 <p>
                                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <span><a href="#">support@foodfunday.com</a></span>
+                                    <span><a href="#">isatradingimpexindia@gmail.com</a></span>
                                 </p>
                             </div>
                             <!-- end footer-box-c -->
@@ -1139,17 +1140,17 @@
                         <!-- end col -->
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="footer-box-d">
-                                <h3>Opening Hours</h3>
+                                <h3>Opening Days</h3>
 
                                 <ul>
                                     <li>
-                                        <p>Monday - Thursday </p>
-                                        <span> 11:00 AM - 9:00 PM</span>
+                                        <p>Monday - Saturday </p>
+                                        <span> 9:00 AM - 6:00 PM</span>
                                     </li>
-                                    <li>
-                                        <p>Friday - Saturday </p>
+                                    <!-- <li>
+                                        <p>Friday -  </p>
                                         <span>  11:00 AM - 5:00 PM</span>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <!-- end footer-box-d -->
@@ -1165,7 +1166,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <h6 class="copy-title"> Copyright &copy; 2017 Food Funday is powered by <a href="#" target="_blank"></a> </h6>
+                            <h6 class="copy-title"> Copyright &copy; 2021 IsaTradingImpex is powered by habeebtech <a href="#" target="_blank"></a> </h6>
                         </div>
                     </div>
                     <!-- end row -->
