--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     <li class="active"><a href="#banner">Home</a></li>
                                     <li><a href="#about">About us</a></li>
                                     <!-- <li><a href="#menu">Menu</a></li> -->
-                                    <li><a href="#our_team">Team</a></li>
+                                    <li><a href="#our_team">Brand</a></li>
                                     <li><a href="#gallery">Gallery</a></li>
                                     <!-- <li><a href="#blog">Blog</a></li>
                                     <li><a href="#pricing">pricing</a></li>
@@ -95,11 +95,11 @@
                 <div class="banner-static">
                     <div class="banner-text">
                         <div class="banner-cell">
-                            <h1>Dinner with us  <span class="typer" id="some-id" data-delay="200" data-delim=":" data-words="Friends:Family:Officemates" data-colors="red"></span><span class="cursor" data-cursorDisplay="_" data-owner="some-id"></span></h1>
+                            <h1>Bathroom  <span class="typer" id="some-id" data-delay="200" data-delim=":" data-words="Fittings:Accessories:Faucets" data-colors="red"></span><span class="cursor" data-cursorDisplay="_" data-owner="some-id"></span></h1>
                             <h2>Accidental appearances </h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem nonummy nibh euismod</p>
                             <div class="book-btn">
-                                <a href="#reservation" class="table-btn hvr-underline-from-center">Book my Table</a>
+                                <a href="#reservation" class="table-btn hvr-underline-from-center">CONTACT US</a>
                             </div>
                             <a href="#about">
                                 <div class="mouse"></div>
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <h2 class="block-title color-white text-center"> Today's Special </h2>
+                        <h2 class="block-title color-white text-center">Cabinets </h2>
                         <h5 class="title-caption text-center"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusm incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia,nostrud exercitation ullamco. </h5>
                     </div>
                     <div class="special-box">
@@ -451,7 +451,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <h2 class="block-title text-center">
-						Our Team 	
+						Our Brand 	
 					</h2>
                         <p class="title-caption text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                     </div>
@@ -464,7 +464,7 @@
                                         <a href="#"><img src="images/staff-01.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
-                                        <h3>John Doggett</h3>
+                                        <h3>FADHI INTERNATIONAL</h3>
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -481,7 +481,7 @@
                                         <a href="#"><img src="images/staff-02.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
-                                        <h3>Jeffrey Spender</h3>
+                                        <h3>ZAMPRO</h3>
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -498,7 +498,7 @@
                                         <a href="#"><img src="images/staff-03.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
-                                        <h3>Monica Reyes</h3>
+                                        <h3>FADHI INTERNATIONAL</h3>
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -971,8 +971,13 @@
                                     <input type="text" name="phone" id="phone" placeholder="contact no.">
                                 </div>
                             </div>
-                            <!-- end col -->
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                <div class="form-box">
+                                    <input class="form-box" type="text" name="form_name" id="form_name" placeholder="Message" required="required"></input>
+                                </div>
+                            </div>
+                            <!-- end col -->
+                            <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-box">
                                     <select name="no_of_persons" id="no_of_persons" class="selectpicker">
                                         <option selected disabled>No. Of persons</option>
@@ -981,21 +986,21 @@
                                         <option>3</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-box">
                                     <input type="text" name="date-picker" id="date-picker" placeholder="Date" required="required" data-error="Date is required." />
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-box">
                                     <input type="text" name="time-picker" id="time-picker" placeholder="Time" required="required" data-error="Time is required." />
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-box">
                                     <select name="preferred_food" id="preferred_food" class="selectpicker">
                                         <option selected disabled>preferred food</option>
@@ -1004,9 +1009,9 @@
                                         <option>Mexican</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-box">
                                     <select name="occasion" id="occasion" class="selectpicker">
                                         <option selected disabled>Occasion</option>
@@ -1015,12 +1020,12 @@
                                         <option>Anniversary</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
 
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="reserve-book-btn text-center">
-                                    <button class="hvr-underline-from-center" type="submit" value="SEND" id="submit">BOOK MY TABLE </button>
+                                    <button class="hvr-underline-from-center" type="submit" value="SEND" id="submit">SUBMIT </button>
                                 </div>
                             </div>
                             <!-- end col -->
@@ -1079,17 +1084,17 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <div class="social-circle-border"><i class="fa fa-twitter"></i></div>
+                                            <div class="social-circle-border"><i class="fa fa-instagram"></i></div>
                                         </a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <a href="#">
                                             <div class="social-circle-border"><i class="fa fa-google-plus"></i></div>
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <li>
                                         <a href="#">
-                                            <div class="social-circle-border"><i class="fa fa-pinterest"></i></div>
+                                            <div class="social-circle-border"><i class="fa fa-whatsapp"></i></div>
                                         </a>
                                     </li>
                                     <li>
@@ -1107,10 +1112,10 @@
                             <div class="footer-box-b">
                                 <h3>New Menu</h3>
                                 <ul>
-                                    <li><a href="#">Italian Bomba Sandwich</a></li>
-                                    <li><a href="#">Double Dose of Pork Belly</a></li>
-                                    <li><a href="#">Spicy Thai Noodles</a></li>
-                                    <li><a href="#">Triple Truffle Trotters</a></li>
+                                    <li><a href="#">Onida Ibibo</a></li>
+                                    <li><a href="#">Plato</a></li>
+                                    <li><a href="#">Algo</a></li>
+                                    <li><a href="#">Garware Technical Fibers</a></li>
                                 </ul>
                             </div>
                             <!-- end footer-box-b -->
@@ -1120,7 +1125,7 @@
                             <div class="footer-box-c">
                                 <h3>Contact Us</h3>
                                 <p>
-                                    <i class="fa fa-map-signs" aria-hidden="true"></i>
+                                    <i class="fa fa-home" aria-hidden="true"></i>
                                     <span>19/1107-B1, Chalappuram, Puthiyapalam Road
                                         Calicut 673002  Kerala, India.</span>
                                 </p>
@@ -1145,7 +1150,7 @@
                                 <ul>
                                     <li>
                                         <p>Monday - Saturday </p>
-                                        <span> 9:00 AM - 6:00 PM</span>
+                                        <span style="color: #fff;"> 9:00 AM - 6:00 PM</span>
                                     </li>
                                     <!-- <li>
                                         <p>Friday -  </p>
@@ -1166,7 +1171,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <h6 class="copy-title"> Copyright &copy; 2021 IsaTradingImpex is powered by habeebtech <a href="#" target="_blank"></a> </h6>
+                            <h6 class="copy-title"> Copyright &copy; 2021 IsaTradingImpex is powered by habeeb <a href="#" target="_blank"></a> </h6>
                         </div>
                     </div>
                     <!-- end row -->
