changes using web git from hp laptop

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                                         <a href="#"><img src="images/staff-01.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
-                                        <h3>FADHI INTERNATIONAL</h3>
+                                        <h3>Fadhi</h3>
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -481,7 +481,7 @@
                                         <a href="#"><img src="images/staff-02.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
-                                        <h3>ZAMPRO</h3>
+                                        <h3>Zampro</h3>
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -498,7 +498,7 @@
                                         <a href="#"><img src="images/staff-03.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
-                                        <h3>FADHI INTERNATIONAL</h3>
+                                        <h3>Falcon</h3>
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
