--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     </div>
     <!-- end special-menu -->
 
-    <div id="menu" class="menu-main pad-top-100 pad-bottom-100">
+    <!-- <div id="menu" class="menu-main pad-top-100 pad-bottom-100">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -281,9 +281,9 @@
                                         </div>
                                         <span class="offer-price">$8.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-02.jpg" alt="" class="img-responsive">
                                         <div>
@@ -294,9 +294,9 @@
                                         </div>
                                         <span class="offer-price">$25</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-03.jpg" alt="" class="img-responsive">
                                         <div>
@@ -307,9 +307,9 @@
                                         </div>
                                         <span class="offer-price">$10</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                            </div>
+                            <!-- </div>
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
@@ -322,9 +322,9 @@
                                         </div>
                                         <span class="offer-price">$5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-05.jpg" alt="" class="img-responsive">
                                         <div>
@@ -335,9 +335,9 @@
                                         </div>
                                         <span class="offer-price">$15</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-06.jpg" alt="" class="img-responsive">
                                         <div>
@@ -348,9 +348,9 @@
                                         </div>
                                         <span class="offer-price">$6.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                            </div>
+                            <!-- </div>
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
@@ -363,9 +363,9 @@
                                         </div>
                                         <span class="offer-price">$4.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-08.jpg" alt="" class="img-responsive">
                                         <div>
@@ -376,9 +376,9 @@
                                         </div>
                                         <span class="offer-price">$9.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-09.jpg" alt="" class="img-responsive">
                                         <div>
@@ -389,9 +389,9 @@
                                         </div>
                                         <span class="offer-price">$10</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                            </div>
+                            <!-- </div>
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
@@ -404,9 +404,9 @@
                                         </div>
                                         <span class="offer-price">$12.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-09.jpg" alt="" class="img-responsive">
                                         <div>
@@ -417,9 +417,9 @@
                                         </div>
                                         <span class="offer-price">$9.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="offer-item">
                                         <img src="images/menu-item-thumbnail-08.jpg" alt="" class="img-responsive">
                                         <div>
@@ -430,19 +430,19 @@
                                         </div>
                                         <span class="offer-price">$5.5</span>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end col -->
-                            </div>
-                        </div>
-                    </div>
+                            <!-- </div> -->
+                        <!-- </div> -->
+                    <!-- </div> -->
                     <!-- end tab-menu -->
-                </div>
+                <!-- </div> -->
                 <!-- end col -->
-            </div>
+            <!-- </div> -->
             <!-- end row -->
-        </div>
+        <!-- </div> -->
         <!-- end container -->
-    </div>
+    <!-- </div> -->
     <!-- end menu -->
 
     <div id="our_team" class="team-main pad-top-100 pad-bottom-100 parallax">
@@ -468,7 +468,7 @@
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                             <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                         </ul>
                                     </div>
@@ -485,7 +485,7 @@
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                             <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                         </ul>
                                     </div>
@@ -502,7 +502,7 @@
                                         <p>Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                             <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                         </ul>
                                     </div>
@@ -746,7 +746,7 @@
     </div>
     <!-- end gallery-main -->
 
-    <div id="blog" class="blog-main pad-top-100 pad-bottom-100 parallax">
+    <!-- <div id="blog" class="blog-main pad-top-100 pad-bottom-100 parallax">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -769,9 +769,9 @@
                                         <h5>BY John Doggett</h5>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                        </div>
+                        <!-- </div>
                         <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                             <div class="col-md-6 col-sm-6">
                                 <div class="blog-block">
@@ -787,9 +787,9 @@
                                         <h5>BY Jeffrey Spender</h5>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                        </div>
+                        <!-- </div>
                         <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                             <div class="col-md-6 col-sm-6">
                                 <div class="blog-block">
@@ -805,9 +805,9 @@
                                         <h5>BY Monica Reyes</h5>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                        </div>
+                        <!-- </div>
                         <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                             <div class="col-md-6 col-sm-6">
                                 <div class="blog-block">
@@ -823,23 +823,23 @@
                                         <h5>BY John Doggett</h5>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end col -->
-                        </div>
-                    </div>
+                        <!-- </div>
+                    </div> -->
                     <!-- end blog-box -->
 
-                    <div class="blog-btn-v">
+                    <!-- <div class="blog-btn-v">
                         <a class="hvr-underline-from-center" href="#">View the Blog</a>
                     </div>
 
-                </div>
+                </div> -->
                 <!-- end col -->
-            </div>
+            <!-- </div> -->
             <!-- end row -->
-        </div>
+        <!-- </div> -->
         <!-- end container -->
-    </div>
+    <!-- </div> -->
     <!-- end blog-main -->
 
     <!-- <div id="pricing" class="pricing-main pad-top-100 pad-bottom-100">
