1/13/2021 WHATSPP ICON ON WEB

--- a/index.html
+++ b/index.html
@@ -87,8 +87,13 @@
         </header>
         <!-- end header -->
     </div>
-	<!-- end site-header -->
-	
+    <!-- end site-header -->
+
+    <!-- whatsapp code start -->
+    <a href="https://api.whatsapp.com/send?phone=+919745222606&text=Hello%20ISA TRADING IMPEX%20I%20Need%20Contact%20You%20." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+        </a>
+	<!-- end whatsapp code -->
     <div id="banner" class="banner full-screen-mode parallax">
         <div class="container pr">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
