--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="banner-text">
                         <div class="banner-cell">
                             <h1>Bathroom  <span class="typer" id="some-id" data-delay="200" data-delim=":" data-words="Fittings:Accessories:Faucets" data-colors="red"></span><span class="cursor" data-cursorDisplay="_" data-owner="some-id"></span></h1>
-                            <h2>Accidental appearances </h2>
+                            <h2>the style & luxury come together </h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem nonummy nibh euismod</p>
                             <div class="book-btn">
                                 <a href="#reservation" class="table-btn hvr-underline-from-center">CONTACT US</a>
