--- a/daily.html
+++ b/daily.html
@@ -145,11 +145,13 @@
 						</button>
 					</div>
 				</form>
+				<div style="margin-top: .5cm; text-align: center;">
+			<p>	For any other corrections wrong entry contact. +91 9496024345 <br> or <br> <a href="tel:+919496024345">Click Here</a></p>
+				</div>
+				
 			</div>
 		</div>
 	</div>
-
-
 
 
 <!--===============================================================================================-->
