mobile desktop viwe ch

--- a/daily.html
+++ b/daily.html
@@ -36,7 +36,11 @@
 			<div class="wrap-contact100">
 				<div class="contact100-pic js-tilt" data-tilt>
 					<img src="images/img-01.png" alt="IMG">
+					<div style="margin-top: .5cm; text-align: center;">
+						<p>	For any other corrections wrong entry contact. +91 9496024345 <br> or <br> <a href="tel:+919496024345">Click Here</a></p>
+							</div>
 				</div>
+				
 
 				<form id="submit-form" class="contact100-form validate-form">
 					<span class="contact100-form-title">
@@ -145,7 +149,7 @@
 						</button>
 					</div>
 				</form>
-				<div style="margin-top: .5cm; text-align: center;">
+				<div class="dtop" style="text-align: center; margin-bottom: 100px !important;">
 			<p>	For any other corrections wrong entry contact. +91 9496024345 <br> or <br> <a href="tel:+919496024345">Click Here</a></p>
 				</div>
 				
