--- a/daily.html
+++ b/daily.html
@@ -149,8 +149,8 @@
 						</button>
 					</div>
 				</form>
-				<div class="dtop" style="text-align: center; margin-bottom: 100px !important;">
-			<p>	For any other corrections wrong entry contact. +91 9496024345 <br> or <br> <a href="tel:+919496024345">Click Here</a></p>
+				<div class="dtop" style="text-align: center;">
+			<p style="margin-top: 35px;">	For any other corrections wrong entry contact. +91 9496024345 <br> or <br> <a href="tel:+919496024345">Click Here</a></p>
 				</div>
 				
 			</div>
