multi firm added and sheet

--- a/mobicare.html
+++ b/mobicare.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Daily Day Book</title>
+	<title>Mobi Care Daily Day Book</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -32,7 +32,7 @@
 <body>
 
 	<div class="bg-contact100" style="background-image: url('images/bg-01.jpg');">
-		<div class="container-contact100">
+		<div class="container-contact100" style="background-color: rgb(49, 19, 184);" >
 			<div class="wrap-contact100">
 				<div class="contact100-pic js-tilt" data-tilt>
 					<img src="images/img-01.png" alt="IMG">
@@ -44,7 +44,7 @@
 
 				<form id="submit-form" class="contact100-form validate-form">
 					<span class="contact100-form-title">
-						Daily Day Book
+						Mobi Care Daily Day Book
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Date is required">
@@ -54,14 +54,7 @@
 							<i class="fa fa-calendar" aria-hidden="true"></i>
 						</span>
 					</div>
-					<div class="wrap-input100 validate-input" data-validate = "Firm name is required">
-						<input class="input100" type="text" name="FIRM NAME" placeholder="ENTER FIRM NAME">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-university" aria-hidden="true"></i>
-						</span>
-					</div>
-
+					
 					<div class="wrap-input100 validate-input" data-validate = "Open balance is required">
 						<input class="input100" type="number" name="OPENING BALANCE" placeholder="OPENING BALANCE">
 						<span class="focus-input100"></span>
@@ -146,7 +139,7 @@
 							Send
 						</button> -->
 
-						<button class="contact100-form-btn  loading buttonload" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Loading...">
+						<button style="background-color: blue;" class="contact100-form-btn  loading buttonload" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Loading...">
 							Submit
 						</button>
 					</div>
