--- a/homestudio.html
+++ b/homestudio.html
@@ -44,7 +44,7 @@
 
 				<form id="submit-form" class="contact100-form validate-form">
 					<span class="contact100-form-title">
-						Eliat Tools Daily Day Book
+						Home Studio Daily Day Book
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Date is required">
